# llm-language-limits

./: .env.example  .gitignore  ARTICLE_DRAFT.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-15-ciphers-experiment.md
docs/superpowers/specs/: 2026-07-15-ciphers-experiment-design.md  2026-07-17-cipher-jailbreak-subprobe-design.md
experiments/ciphers/: analysis.ipynb  config.py  jailbreak_probe.py  run_full.py  run_pilot.py  run_smoke.py  sweep.py
experiments/repetition/: analysis.ipynb  analyze.py  infer.py  run_full.py  run_harness_bias.py  run_pilot.py  run_smoke.py  stimuli.yaml
modal_app/: deploy_open_models.py  run_sweep_cloud.py
scripts/: backfill_judgments.py  verify_credentials.py
src/llm_language_limits/: backfill.py  cipher_detect.py  cipher_runner.py  ciphers.py  config.py  cost.py  embeddings.py  environment.py  judge.py  metrics.py  oracle.py  prompts.py  ratelimit.py  runner.py  stimuli.py  storage.py
src/llm_language_limits/clients/: __init__.py  anthropic_client.py  azure_openai_client.py  base.py  modal_client.py
tests/: conftest.py  test_analysis.py  test_backfill.py  test_cipher_detect.py  test_cipher_runner.py  test_cipher_sweep.py  test_ciphers.py  test_clients_base.py  test_config.py  test_cost.py  test_embeddings.py  test_environment.py  test_judge.py  test_metrics.py  test_oracle.py  test_prompts.py  test_ratelimit.py  test_run_full.py  test_runner.py  test_stimuli.py  test_storage.py
