[project]
name = "llm-language-limits"
version = "0.1.0"
description = "How LLMs behave at the edges of language — experiment 1: repetition."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "matplotlib>=3.8",
    "anthropic>=0.34",
    "openai>=1.40",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
open = ["modal>=0.64", "transformers>=4.44", "torch>=2.3", "sentence-transformers>=3.0"]
dev = [
    "nbformat>=5.10.4",
    "pytest>=8.0",
 "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_language_limits"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
